# audio007

./: README.md  pyproject.toml
src/: apontador.py
src/audio007/: apontador.py  arara.py  audio_utils.py  carrinho.py
