[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "audio007"
version = "0.0.1"
authors = [
  { name="Bóris Marin", email="boris.marin@ufabc.edu.br" },
]
description = "Utilidades para controle de experimentos no Lab007 da UFABC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NeuroUFABC/Lab007/ferramentas_python/audio007"
"Bug Tracker" = "https://github.com/NeuroUFABC/Lab007/issues"
